<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>path_sketch</name>
  <version>0.0.0</version>
  <description>Path sketcher for SINAV</description>
  <author email="dgraziato10@gmail.com">davide</author>
  <maintainer email="dgraziato10@gmail.com">davide</maintainer>
  <maintainer email="roncapat@gmail.com">Patrick Roncagliolo</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
   
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rcutils</depend> 
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
